fixing whitespace at bottom of main logged out screen

--- a/src/App.css
+++ b/src/App.css
@@ -122,3 +122,9 @@ form label svg {
 .header {
   z-index: 50;
 }
+
+.attract-main {
+  overflow: hidden;
+  width: 100%;
+  height: 100vh;
+}
